k8s/external-access/awa-admin-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: awa-admin-redirect-permanent
  namespace: awa-bot
spec:
  redirectScheme:
    permanent: true
    scheme: https
