k8s/external-access/awa-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: awa-admin-ingress
 namespace: awa-bot
 annotations:
   cert-manager.io/issuer: "awa-admin-http"
spec:
 tls:
   - hosts:
       - awa-admin.tashima.space
     secretName: tls-awa-admin-ingress-http
 rules:
   - host: awa-admin.tashima.space
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: admin-service
               port:
                 name: web
