k8s/external-access/awa-admin-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: awa-admin-http
  namespace: awa-bot
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host("awa-admin.tashima.space")
    services:
    - name: admin@internal
      kind: TraefikService
    middlewares:
    - name: awa-admin-redirect-permanent
