k8s/external-access/awa-api-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: awa-api-ingressroute
  namespace: awa-bot
spec:
  entryPoints:
    - websecure
  tls:
    secretName: awa-api-crt
  routes:
    - kind: Rule
      match: Host("awa.tashima.space")
      services:
        - name: api-service
          port: 8096
