k8s/external-access/awa-api-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: awa-api-http
  namespace: awa-bot
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host("awa.tashima.space")
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: awa-api-redirect-permanent
